style.css
* { margin: 0; padding: 0; box-sizing: border-box; line-height: 1.6; }
html { font-size: 16px; font-family: sans-serif; }
body { padding: 8px; }

p {
	margin: 15px 0;
}
p:first-child {
	margin-top: 0;
}

.error {
	color: red;
}

input {
	padding: 7px 5px;
}
input:not([type="submit"]):not([type="checkbox"]) {
	width: 100%;
}
input[type="submit"],
button {
	padding: 7px 14px;
}

.form-item {
	margin-bottom: 1em;
}

.inline-filter {
	display: inline;
}
.inline-filter .search {
	border: solid 0px #aaa;
	background-color: #eee;
}
.inline-filter .search:not(.focus) {
	width: 4em;
}
.inline-filter .search.focus {
	padding: 13px;
	box-shadow: 0 0 1em 0 rgba(0,0,0,0.3) inset;
}
.inline-filter .submit {
	display: none;
}

.working {
	-webkit-animation: ajaxworking linear 1s infinite;
}

@-webkit-keyframes ajaxworking {
	from {
		-webkit-transform: rotate(0deg);
	}
	to {
		-webkit-transform: rotate(360deg);
	}
}

h3 {
	margin-bottom: 8px;
}
h3 .sub {
	font-size: 90%;
}
.bookmarks,
.bookmarks li {
	display: block;
	list-style: none;
}
.bookmarks {
	margin-bottom: 8px;
}
.multiple .bookmarks {
	margin-bottom: 0;
}
.group-header {
	padding: 8px;
	font-weight: bold;
	font-size: 120%;
	text-transform: uppercase;
	letter-spacing: 1px;
}
.multiple:not(.hidden) .group-header {
	border-bottom: solid 1px #ddd;
}
.group-header,
.group-header * {
	line-height: 1;
}
.group-header a.group-name {
	text-decoration: none;
	color: black;
}
.group-header a.group-name:before {
	content: "\2228";
	margin-right: .25em;
}
.multiple.hidden .group-header a.group-name:before {
	content: "\2227";
	margin-right: .25em;
}
.group-header a.filter {
	line-height: 1;
	text-transform: none;
	text-decoration: none;
	color: green;
}
.bookmarks li {
	padding: 8px;
	background-color: #eee;
	word-break: break-word;
}
.bookmarks.outer > li {
	box-shadow: 0 0 2px #999;
}
.bookmarks li.multiple {
	padding: 5px;
}
.bookmarks li + li {
	margin-top: 8px;
}
.bookmarks li.multiple:not(.hidden) + li {
	margin-top: 16px;
	padding-top: 16px;
}
.multiple.hidden > ol {
	display: none;
}
.multiple .bookmarks li + li {
	margin-top: 0;
	border-top: solid 1px #ddd;
}
.bookmarks .archive,
.bookmarks .unarchive {
	float: left;
	margin-right: .5em;
}
.bookmarks .archive a,
.bookmarks .unarchive a,
.bookmarks .edit a,
.bookmarks .actualize a {
	display: inline-block;
	background-color: red;
	color: white;
	padding: 0 6px;
	border-radius: 4px;
	text-decoration: none;
	line-height: 1.4;
}
.bookmarks .unarchive a {
	background-color: green;
}
.bookmarks .archive a:hover,
.bookmarks .archive a:focus,
.bookmarks .unarchive a:hover,
.bookmarks .unarchive a:focus,
.bookmarks .edit a:hover,
.bookmarks .edit a:focus,
.bookmarks .actualize a:hover,
.bookmarks .actualize a:focus {
	background-color: black;
}
.bookmarks .link a {
	color: inherit;
	font-weight: bold;
	text-decoration: none;
	font-size: 120%;
}
.bookmarks .favorite {
	display: inline-block;
	margin-left: .25em;
}
.bookmarks .favorite a {
	font-size: 140%;
	line-height: 1em;
	text-decoration: none;
	color: #000;
	opacity: 0.3;
}
.bookmarks .is-favorite .favorite a {
	opacity: 1.0;
}
.bookmarks .created {
	float: right;
}
.bookmarks .host {
	float: left;
	text-decoration: underline;
}
.bookmarks .group {
	margin-right: .5em;
	font-weight: bold;
}
.bookmarks .host a {
	color: #888;
}
.bookmarks .change-group,
.bookmarks .edit,
.bookmarks .actualize {
	float: left;
	margin-left: .5em;
}
.bookmarks .change-group select {
	width: 3em;
	overflow: hidden;
	padding: 0 4px;
	word-break: normal;
	-webkit-appearance: none;
	text-align: left;
	text-align-last: center;
}
.bookmarks .edit a {
	background-color: blue;
}
.bookmarks .actualize a {
	background-color: green;
	padding: 0 3px;
}



.pager,
.pager li {
	list-style: none;
	padding: 0;
}
.pager {
	display: block;
}
.pager li {
	display: inline-block;
}
.pager a {
	display: block;
	padding: 0 11px;
	background-color: #ddd;
	font-weight: bold;
	text-decoration: none;
	color: #000;
	border: solid 1px #999;
}
.pager .current a {
	background-color: #999;
	color: #fff;
}



.bookmarks li::after {
	content: '';
	display: block;
	clear: both;
	height: 0;
}

